<resources>
    <string name="app_name">SzegediMenetrend</string>
    <string name="password">Jelszó</string>
    <string name="name">Név</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="savedSchedules">Kedvenc járataim</string>
    <string name="addFavorite">Járat hozzáadása</string>
    <string name="savedScheduleInfo">Nincs megjeleníthető kedvenc járatod</string>
    <string name="logOut">Kijelentkezés</string>
    <string name="delete">Törlés</string>
</resources>